--- a/style.css
+++ b/style.css
@@ -1,18 +1,34 @@
 div{
     text-align: center;
-    padding: 10em;
+    width: 400px;
+    height: 200px;
+    box-sizing: border-box;
+    background-color: rgb(7, 7, 7);
+    margin: auto;
+    margin-top: 150px;
+    padding-top: 1em;
+    
 }
 
 body{
-    background-color: #333;
+    background-color: black;
 }
 
 h1{
     color:white;
+    font-family: 'Mulish', sans-serif;
 }
 
 button{
     height: 2.5em;
     width: 5.5em;
     border: none;
+    color:rgb(77, 77, 77);
+    background-color: black;
+    transition: 0.4s;
+    cursor: pointer;
+}
+
+button:hover{
+    color: white;
 }
