--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ footer{
     box-sizing: border-box;
     height: 260px;
     text-align: center;
-    padding-top: 38%;
+    padding-top: 23%;
     padding-bottom: 30px;
     margin-left: 20px;
     color: white;
@@ -60,6 +60,11 @@ i{
 
     button{
         color: white;
+    }
+    
+    
+    footer{
+        padding-top: 60%;
     }
 
 }
